Initial commit: Complete website with all files and styling

--- a/case-studies.html
+++ b/case-studies.html
@@ -27,11 +27,17 @@
     </header>
 
     <main>
-        <section class="hero-section">
+        <section class="case-studies-hero-section">
+            <div class="hero-pattern-grid"></div>
+            <div class="hero-floating-shapes">
+                <div class="hero-shape hero-shape-1"></div>
+                <div class="hero-shape hero-shape-2"></div>
+            </div>
             <div class="container">
-                <div class="content-container">
-                    <h1>Case Studies</h1>
-                    <p class="subtitle">Real-world examples of successful product initiatives and strategic solutions</p>
+                <div class="hero-content">
+                    <div class="hero-badge">Success Stories</div>
+                    <h1>Transformative Product Solutions</h1>
+                    <p class="subtitle">Explore how we've helped businesses achieve remarkable growth through strategic product management</p>
                 </div>
             </div>
         </section>
@@ -136,17 +142,37 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="content-container">
-                <div class="footer-content">
-                    <div class="footer-info">
-                        <p class="footer-text">Ready to discuss your product challenges?</p>
-                        <a href="contact.html" class="button button-primary">Get in Touch</a>
-                    </div>
+            <div class="footer-grid">
+                <div class="footer-info">
+                    <a href="index.html" class="logo-container">
+                        <span class="logo-text">Product with Jasleen</span>
+                    </a>
+                    <p class="footer-text">Strategic product management services to help businesses innovate and grow.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
+                <div class="footer-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="offerings.html">Services</a></li>
+                        <li><a href="case-studies.html">Case Studies</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h3>Contact</h3>
+                    <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +919643383082</p>
+                    <a href="contact.html" class="button button-primary">Get in Touch</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Product with Jasleen. All rights reserved.</p>
             </div>
         </div>
     </footer>
