Update footer contact styles and fix hamburger menu visibility

--- a/about.html
+++ b/about.html
@@ -68,32 +68,32 @@
                         <i class="fas fa-certificate"></i>
                         <span>CSM®</span>
                         <p>Certified Scrum Master</p>
-                    </div>
+                            </div>
                     <div class="certification-badge">
                         <i class="fas fa-award"></i>
                         <span>CSPO®</span>
                         <p>Certified Scrum Product Owner</p>
-                    </div>
+                            </div>
                     <div class="certification-badge">
                         <i class="fas fa-star"></i>
                         <span>CPM</span>
                         <p>Certified Product Manager</p>
-                    </div>
+                        </div>
                     <div class="certification-badge">
                         <i class="fas fa-shield-alt"></i>
                         <span>HIPAA</span>
                         <p>HIPAA Awareness for Business Associates</p>
-                    </div>
+                            </div>
                     <div class="certification-badge">
                         <i class="fas fa-check-circle"></i>
                         <span>ISO</span>
                         <p>ISO13485:2016 Implementation</p>
-                    </div>
+                            </div>
                     <div class="certification-badge">
                         <i class="fas fa-chart-line"></i>
                         <span>Analytics</span>
                         <p>Marketing & Google Analytics</p>
-                    </div>
+                        </div>
                     <div class="certification-badge">
                         <i class="fas fa-cube"></i>
                         <span>Blockchain</span>
@@ -110,22 +110,22 @@
                     <p class="subtitle">Comprehensive toolkit for product success</p>
                 </div>
                 <div class="skills-showcase">
-                    <div class="skills-grid">
+                <div class="skills-grid">
                         <div class="skill-category">
                             <div class="skill-header">
                                 <div class="skill-icon-wrapper">
                                     <i class="fas fa-tasks"></i>
                                 </div>
                                 <h3>Product Strategy</h3>
-                            </div>
+                        </div>
                             <div class="skill-content">
                                 <div class="skill-pills">
                                     <span>PRD & BSP</span>
                                     <span>Design Thinking</span>
                                     <span>Roadmapping</span>
                                     <span>User Research</span>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
                         </div>
                         <div class="skill-category">
                             <div class="skill-header">
@@ -140,8 +140,8 @@
                                     <span>MoEngage</span>
                                     <span>Tableau</span>
                                     <span>Google Analytics</span>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
                         </div>
                         <div class="skill-category">
                             <div class="skill-header">
@@ -156,8 +156,8 @@
                                     <span>Miro</span>
                                     <span>JIRA</span>
                                     <span>Confluence</span>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
                         </div>
                     </div>
                 </div>
@@ -201,13 +201,13 @@
                         <div class="achievement-content">
                             <div class="achievement-icon">
                                 <i class="fas fa-users"></i>
-                            </div>
+                        </div>
                             <div class="achievement-details">
                                 <p class="achievement-stat">60%</p>
                                 <p class="achievement-label">Retention</p>
                                 <div class="achievement-divider"></div>
                                 <p class="achievement-text">Via gamification</p>
-                            </div>
+                    </div>
                         </div>
                     </div>
                 </div>
@@ -240,10 +240,10 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
+                <div class="contact">
                     <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +919643383082</p>
+                    <a href="mailto:productwithjasleen@gmail.com">productwithjasleen@gmail.com</a>
+                    <a href="tel:+919643383082">+91 9643383082</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -536,4 +536,4 @@
         }
     </style>
 </body>
-</html> 
+</html>
