--- a/case-studies.html
+++ b/case-studies.html
@@ -194,10 +194,10 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="footer-contact">
+                <div class="contact">
                     <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +919643383082</p>
+                    <a href="mailto:productwithjasleen@gmail.com">productwithjasleen@gmail.com</a>
+                    <a href="tel:+919643383082">+91 9643383082</a>
                 </div>
             </div>
             <div class="footer-bottom">
