--- a/case-study-engagement.html
+++ b/case-study-engagement.html
@@ -139,9 +139,10 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> productwithjasleen@gmail.com</p>
-                    <p><i class="fas fa-phone"></i> +919643383082</p>
-                    <a href="contact.html" class="button button-primary">Get in Touch</a>
+                    <div class="contact">
+                        <a href="mailto:productwithjasleen@gmail.com">productwithjasleen@gmail.com</a>
+                        <a href="tel:+919643383082">+91 9643383082</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
