--- a/contact.html
+++ b/contact.html
@@ -46,40 +46,69 @@
             <div class="container">
                 <div class="section-header">
                     <h1>Let's Connect</h1>
-                    <p class="subtitle">I'm always interested in hearing about new projects and challenges. Whether you have a specific question or just want to say hello, I'd love to hear from you.</p>
+                    <p class="subtitle">Ready to transform your product vision into reality? Let's start a conversation.</p>
                 </div>
-                <div class="contact-info">
-                    <div class="contact-method">
-                        <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
+                <div class="contact-grid">
+                    <div class="contact-info">
+                        <div class="contact-method">
+                            <div class="contact-icon">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <div class="contact-details">
+                                <h3>Email</h3>
+                                <p>productwithjasleen@gmail.com</p>
+                            </div>
                         </div>
-                        <div class="contact-details">
-                            <h3>Email</h3>
-                            <p>productwithjasleen@gmail.com</p>
+                        <div class="contact-method">
+                            <div class="contact-icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="contact-details">
+                                <h3>Phone</h3>
+                                <p>+91 9643383082</p>
+                            </div>
+                        </div>
+                        <div class="contact-method">
+                            <div class="contact-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="contact-details">
+                                <h3>Location</h3>
+                                <p>Mumbai, India</p>
+                            </div>
+                        </div>
+                        <div class="social-links">
+                            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                            <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                            <a href="#" class="social-link"><i class="fab fa-medium"></i></a>
                         </div>
                     </div>
-                    <div class="contact-method">
-                        <div class="contact-icon">
-                            <i class="fas fa-phone"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Phone</h3>
-                            <p>+919643383082</p>
-                        </div>
-                    </div>
-                    <div class="contact-method">
-                        <div class="contact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div class="contact-details">
-                            <h3>Location</h3>
-                            <p>Mumbai, India</p>
-                        </div>
-                    </div>
-                    <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-medium"></i></a>
+                    <div class="contact-form">
+                        <form id="contactForm" action="#" method="POST">
+                            <div class="form-group">
+                                <label for="name">Full Name <span class="required">*</span></label>
+                                <input type="text" id="name" name="name" required placeholder="Enter your full name">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email Address <span class="required">*</span></label>
+                                <input type="email" id="email" name="email" required placeholder="Enter your email">
+                            </div>
+                            <div class="form-group">
+                                <label for="company">Company Name <span class="required">*</span></label>
+                                <input type="text" id="company" name="company" required placeholder="Enter your company name">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">Phone Number</label>
+                                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" rows="5" placeholder="Tell us about your project or inquiry"></textarea>
+                            </div>
+                            <div class="form-submit">
+                                <button type="submit" class="button button-primary">Send Message</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -131,9 +160,10 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> hello@productwithjasleen.com</p>
-                    <p><i class="fas fa-phone"></i> +1 (555) 123-4567</p>
-                    <a href="contact.html" class="button button-primary">Get in Touch</a>
+                    <div class="contact">
+                        <a href="mailto:productwithjasleen@gmail.com">productwithjasleen@gmail.com</a>
+                        <a href="tel:+919643383082">+91 9643383082</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
