Final updates: Fixed navigation alignment, refined offerings banner, optimized featured case study layout

--- a/index.html
+++ b/index.html
@@ -126,44 +126,130 @@
             </div>
         </section>
 
-        <section class="process-section alt-bg">
+        <!-- Case Studies Section -->
+        <section class="case-studies-section">
+            <div class="container">
+                <div class="featured-case-study">
+                    <div class="case-study-wrapper">
+                        <div class="case-study-image-left">
+                            <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2340&q=80" alt="Gamification Case Study">
+                        </div>
+                        <div class="case-study-content-right">
+                            <span class="case-study-tag">Featured Work</span>
+                            <h3>Gamification for User Retention</h3>
+                            <div class="case-study-cta">
+                                <a href="case-studies.html" class="button">View Case Study →</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Offerings Banner Section -->
+        <section class="offerings-banner">
+            <div class="container">
+                <div class="offerings-banner-wrapper">
+                    <div class="offerings-banner-content">
+                        <h2>Discover Our Product Solutions</h2>
+                        <p>From strategy to execution, explore our comprehensive range of product management services tailored for your business growth.</p>
+                        <a href="offerings.html" class="button button-white">Explore Solutions</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Blog Section -->
+        <section class="blog-section">
             <div class="container">
                 <div class="section-header">
                     <div class="section-icon">
-                        <i class="fas fa-route"></i>
+                        <i class="fas fa-pen-fancy"></i>
                     </div>
-                    <h2>My Process</h2>
-                    <p class="subtitle">A structured approach to product management that delivers results</p>
+                    <h2>Latest Insights</h2>
+                    <p class="subtitle">Explore my latest thoughts on product management, UX design, and digital innovation</p>
                 </div>
-                <div class="process-steps">
-                    <div class="process-step">
-                        <div class="step-number">01</div>
-                        <div class="step-content">
-                            <h3>Discovery</h3>
-                            <p>Understanding your business goals, user needs, and market opportunities.</p>
+                <div class="case-studies-grid">
+                    <!-- Blog Post 1 -->
+                    <article class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="AI in Product Management">
+                            <span class="case-study-tag">Product Strategy</span>
                         </div>
-                    </div>
-                    <div class="process-step">
-                        <div class="step-number">02</div>
-                        <div class="step-content">
-                            <h3>Strategy</h3>
-                            <p>Developing a comprehensive product strategy and roadmap.</p>
+                        <div class="case-study-content">
+                            <h3>The Role of AI in Modern Product Management</h3>
+                            <p>Exploring how artificial intelligence is transforming product development and decision-making processes in 2024.</p>
+                            <div class="case-study-stats">
+                                <div class="stat">
+                                    <span class="stat-value">2024</span>
+                                    <span class="stat-label">Published</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">10+</span>
+                                    <span class="stat-label">Use Cases</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">AI</span>
+                                    <span class="stat-label">Focus</span>
+                                </div>
+                            </div>
+                            <a href="https://productschool.com/blog/artificial-intelligence/guide-ai-product-manager" class="button button-primary" target="_blank">Read Article</a>
                         </div>
-                    </div>
-                    <div class="process-step">
-                        <div class="step-number">03</div>
-                        <div class="step-content">
-                            <h3>Execution</h3>
-                            <p>Implementing the strategy with agile methodologies and continuous feedback.</p>
+                    </article>
+
+                    <!-- Blog Post 2 -->
+                    <article class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="https://images.unsplash.com/photo-1586717791821-3f44a563fa4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="UX Design Trends">
+                            <span class="case-study-tag">UX Design</span>
                         </div>
-                    </div>
-                    <div class="process-step">
-                        <div class="step-number">04</div>
-                        <div class="step-content">
-                            <h3>Optimization</h3>
-                            <p>Measuring results and iterating for continuous improvement.</p>
+                        <div class="case-study-content">
+                            <h3>UX Design Trends Shaping Digital Products</h3>
+                            <p>A deep dive into the latest UX design trends and how they're influencing product success in the digital space.</p>
+                            <div class="case-study-stats">
+                                <div class="stat">
+                                    <span class="stat-value">2024</span>
+                                    <span class="stat-label">Published</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">5+</span>
+                                    <span class="stat-label">Trends</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">UX</span>
+                                    <span class="stat-label">Focus</span>
+                                </div>
+                            </div>
+                            <a href="https://trends.uxdesign.cc/" class="button button-primary" target="_blank">Read Article</a>
                         </div>
-                    </div>
+                    </article>
+
+                    <!-- Blog Post 3 -->
+                    <article class="case-study-card">
+                        <div class="case-study-image">
+                            <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Freelance Product Management">
+                            <span class="case-study-tag">Career</span>
+                        </div>
+                        <div class="case-study-content">
+                            <h3>Unlocking Business Growth with Freelance Product Management</h3>
+                            <p>Discover how freelance product management is revolutionizing the industry and providing businesses with flexible, expert solutions.</p>
+                            <div class="case-study-stats">
+                                <div class="stat">
+                                    <span class="stat-value">2024</span>
+                                    <span class="stat-label">Published</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">4x</span>
+                                    <span class="stat-label">Growth</span>
+                                </div>
+                                <div class="stat">
+                                    <span class="stat-value">ROI</span>
+                                    <span class="stat-label">Focus</span>
+                                </div>
+                            </div>
+                            <a href="freelance-product-management.html" class="button button-primary">Read Article</a>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
