--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <div class="container">
             <nav class="nav">
                 <div class="nav-container">
-                    <a href="/" class="logo">
-                        <img src="assets/images/logo.png" alt="Product with Jasleen Logo">
-                        <span>Product with Jasleen</span>
+                    <a href="index.html" class="logo-container">
+                        <img src="images/logo.png" alt="Product with Jasleen">
+                        <span class="logo-text">Product with Jasleen</span>
                     </a>
-                    <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">
-                        <span></span>
+                    <button class="mobile-menu-toggle" aria-label="Toggle menu">
+                        <span class="hamburger"></span>
                     </button>
                     <ul class="nav-links">
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#case-studies">Case Studies</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact" class="cta-button">Contact</a></li>
+                        <li><a href="#services" class="nav-link">Services</a></li>
+                        <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
+                        <li><a href="#about" class="nav-link">About</a></li>
+                        <li><a href="#contact" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
             </nav>
