--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <div class="nav-container">
                     <a href="index.html" class="logo-container">
                         <img src="images/logo.png" alt="Product with Jasleen">
-                        <span class="logo-text">Product with Jasleen</span>
+                        <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                     </a>
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
                         <span class="hamburger"></span>
                     </button>
                     <ul class="nav-links">
-                        <li><a href="#services" class="nav-link">Services</a></li>
-                        <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
-                        <li><a href="#about" class="nav-link">About</a></li>
-                        <li><a href="#contact" class="nav-link">Contact</a></li>
+                        <li><a href="offerings.html" class="nav-link">Offerings</a></li>
+                        <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
+                        <li><a href="about.html" class="nav-link">About</a></li>
+                        <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
             </nav>
