Removed duplicate logo and fixed logo alignment in header

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <nav class="nav">
                 <div class="nav-container">
                     <a href="index.html" class="logo-container">
-                        <img src="images/logo.png" alt="Product with Jasleen">
                         <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
                     </a>
                     <button class="mobile-menu-toggle" aria-label="Toggle menu">
                         <span class="hamburger"></span>
                     </button>
                     <ul class="nav-links">
+                        <li><a href="index.html" class="nav-link active">Home</a></li>
                         <li><a href="offerings.html" class="nav-link">Offerings</a></li>
                         <li><a href="case-studies.html" class="nav-link">Case Studies</a></li>
                         <li><a href="about.html" class="nav-link">About</a></li>
@@ -323,9 +323,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-info">
-                    <a href="index.html" class="logo-container">
-                        <span class="logo-text">Product with <span class="logo-highlight">Jasleen</span></span>
-                    </a>
+                    <div class="footer-brand">
+                        Product with <span class="text-highlight">Jasleen</span>
+                    </div>
                     <p class="footer-text">Strategic product management services to help businesses innovate and grow.</p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
